2010-08-31  Gary V. Vaughan  <gary@gnu.org>

	build: name temporary files in `Makefile.am' consistently.
	Sadly, we still have to jump through hoops for MICROS~1's very
	old, very broken 8.3 naming convention, so we have to be careful
	to be unique in the first 8 letters, and not to use two periods
	in a filename, otherwise we could use the much more elegent
	`temporary files use "$@T"' idiom:
	* Makefile.am (libltdl/m4/ltversion.m4): Rename temporary file
	to `ltversion.tmp'.
	(libltdl/config/ltmain.sh): Rename temporary file to
	`libltdl/config/ltmain.tmp'.
	(libtoolize): Rename temporary file to `libtoolize.tmp'.
	(tests/defs): Rename temporary file to `tests/defs.tmp'
	(tests/testsuite): Rename temporary file to `tests/testsuite.tmp'.
	(CLEANFILES): Append temporary files as we create rules that
	use them.

	build: factor Makefile.am `m4sh' invocations to LT_M4SH.
	* Makefile.am (LT_M4SH): Now that all directories are listed as
	fully qualified paths, the search path argument to M4SH is always
	the same, so factor it out into a variable.  Adjust all callers.

	build: avoid unnecessary directory changes in Makefile rules.
	* Makefile.am (doc/notes.txt, libltdl/m4/ltversion.m4,
	(libltdl/config/ltmain.m4sh, libtoolize.in, libltdl/Makefile.am)
	(libltdl/config/mkstamp, tests/testsuite, tests/defs.in): Avoid
	unnecessary `cd' commands by using fully qualified paths to files
	outside of current directory.

	build: compare `revision' rather than `correctver' in Makefile.am.
	* Makefile.am (rebuild): Set the shell variable `revision' rather
	than `correctver' for clarity of purpose.
	(bootstrap_edit, libltdl/config/ltmain.sh): Adjust.
	(libltdl/m4/ltversion.m4): Likewise, and alse, instead of munging
	the serial number comment line with set, extract `macro_version'
	from this file, and compare it directly with `revision'.
	(libtool): Likewise for `package_revision'.

2010-09-24  Gary V. Vaughan  <gary@gnu.org>
